[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-agentfetch"
version = "0.1.0"
description = "LangChain Tool wrapper for AgentFetch — token-budgeted web fetch for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brett Halverson" }]
keywords = ["langchain", "agentfetch", "web-scraping", "ai-agents", "tool", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.3,<1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://www.agentfetch.dev"
Repository = "https://github.com/bch1212/langchain-agentfetch"
Issues = "https://github.com/bch1212/langchain-agentfetch/issues"

[tool.setuptools.packages.find]
include = ["langchain_agentfetch*"]
